gccida/g2/find_placeholder
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_placeholder/src/expr.c:6404:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *section_name; // r8 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_placeholder/src/expr.c:6456:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v8.rtwint = ( __int64)rtl->fld[0]; 
                      ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_placeholder/src/expr.c:6458:19: error: expected expression
&& *( tree_node **)( *( _QWORD *)( v8.rtwint + 8) + 128LL) == section_name ) 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_placeholder/src/expr.c:6458:7: error: use of undeclared identifier 'tree_node'
&& *( tree_node **)( *( _QWORD *)( v8.rtwint + 8) + 128LL) == section_name ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_placeholder/src/expr.c:6462:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v9 = ( __int64)rtl[1]; 
               ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_placeholder/src/expr.c:6468:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
rtl = ( rtx)rtl[2]; 
            ^~~~~~
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_placeholder/src/obj/expr.o] Error 1
